Add prompt for theme

--- a/generators/client/templates/angular/src/main/webapp/content/scss/daily.scss.ejs
+++ b/generators/client/templates/angular/src/main/webapp/content/scss/daily.scss.ejs
@@ -6,9 +6,11 @@
     background-size: contain;
 }
 
+<% if(theme === 'red'){ %>
 .bg-dark {
     background-color: #ff0000 !important;
 }
+<% } %>
 
 .forecast {
     margin: 0;
