--- a/generators/client/templates/angular/src/main/webapp/app/home/home.component.html.ejs
+++ b/generators/client/templates/angular/src/main/webapp/app/home/home.component.html.ejs
@@ -6,7 +6,7 @@
         <h1 class="display-4">Breaking news</h1>
 
         <article class="forecast">
-            <h1>Next broadcast schudle</h1>
+            <h1>Next broadcast schedule</h1>
             <article class="day-forecast">
                 <h2>03 March 2018</h2>
                 <p>09:00 am</p>
